--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,219 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap");
-.adopciones {
-  text-align: center;
-  margin: 10px;
-  border-bottom: 1px solid black;
-  background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
-}
-
-.adopciones p {
-  font-size: 20px;
-  color: #fff;
-  padding: 10px;
-}
-
-.contenedorMascotas {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  background-image: url("/fondoadopciones/symbol-scatter-haikei.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-.adopciones {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 20px;
-  text-align: center;
-}
-
-.mascota {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  border: 1px solid #ccc;
-  padding: 20px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  margin: 10px;
-}
-.mascota img {
-  max-width: 100%;
-  filter: grayscale(90%);
-}
-.mascota img:hover {
-  filter: grayscale(0%);
-}
-.mascota p {
-  margin: 10px 0;
-}
-.mascota button {
-  background-color: #7AB730;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  font-size: 1rem;
-  cursor: pointer;
-  margin-top: 10px;
-}
-.mascota button:hover {
-  background-color: #28a745;
-}
-
-/*RESPONSIVE*/
-@media (max-width: 1023px) {
-  .mascota {
-    margin: 5vh;
-    font-size: 2rem;
-  }
-  .mascota h3,
-  .mascota p {
-    font-size: inherit;
-  }
-  .contenedorMascotas {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-@media (max-width: 768px) {
-  .contenedorMascotas {
-    grid-template-columns: 1fr;
-  }
-}
-/* Footer */
-.footer {
-  background-color: #2889c1;
-  color: #fff;
-  padding: 20px 0;
-}
-
-.footerContenido {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.footer h4 {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
-}
-
-.infoContacto p,
-.redesSociales a {
-  margin: 5px 0;
-  font-size: 1.2rem;
-}
-
-.redesSociales a {
-  color: #e4e7de;
-  text-decoration: none;
-  margin-right: 10px;
-  font-size: 1.5rem;
-}
-
-.redesSociales a:hover {
-  color: #fafafa;
-}
-
-.footer i {
-  margin-right: 10px;
-}
-
-/*CONTACTO*/
-.mi-formulario {
-  max-width: 400px;
-  margin: 50px auto;
-}
-.mi-formulario label {
-  display: block;
-  margin-bottom: 5px;
-}
-.mi-formulario input {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-}
-.mi-formulario input:focus {
-  outline: none;
-  border-color: #333;
-}
-.mi-formulario input[type=submit] {
-  background-color: #333;
-  color: #f1eaea;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.mi-formulario input[type=submit]:hover {
-  background-color: #555;
-}
-
-/*TIENDA*/
-main .contenedorProductos {
-  display: grid;
-  gap: 60px;
-  margin: 36px 0;
-}
-
-.productos {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(200px, 1fr));
-  gap: 30px;
-  background-image: url("/fondoadopciones/symbol-scatter-haikei.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-.producto {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  border-radius: 5px;
-  margin: 30px;
-  background-color: white;
-}
-
-.imagenProducto {
-  width: 100%;
-  height: 200px;
-  object-fit: contain;
-  border-radius: 5px;
-  margin-bottom: 20px;
-}
-
-/*USANDO MIXIN*/
-.botonProducto {
-  padding: 10px;
-  background-color: #2ecc71;
-  color: #fafafa;
-  font-weight: bold;
-  text-transform: uppercase;
-  border-radius: 5px;
-  cursor: pointer;
-  border: none;
-  margin: 10px;
-  display: grid;
-}
-
-body,
-html {
-  height: 100%;
-  font-family: Arial, sans-serif;
-}
-
 .miLogo {
   width: 120px;
 }
@@ -254,12 +41,24 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  color: #2889c1;
+  color: #f0f3f4;
 }
 
 h1 {
   font-size: 3em;
   margin-bottom: 20px;
+  position: relative;
+}
+h1::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(14, 15, 18, 0.5);
+  z-index: -1;
 }
 
 p {
@@ -282,6 +81,383 @@ p {
   background-color: #555;
 }
 
+.whatsapp-btn {
+  width: 60px;
+  position: fixed;
+  bottom: 15px;
+  right: 50px;
+  object-fit: contain;
+}
+.whatsapp-btn a {
+  text-decoration: none;
+  color: #fafafa;
+}
+.whatsapp-btn img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 50px;
+}
+.whatsapp-btn:hover {
+  transform: scale(1.1);
+}
+
+main .contenedorMascotas {
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  margin: 0;
+  background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+}
+
+.adopciones {
+  text-align: center;
+  margin: 10px;
+  border-bottom: 1px solid black;
+  background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+}
+
+.adopciones p {
+  font-size: 20px;
+  color: #fafafa;
+  padding: 10px;
+  font-family: "Roboto", sans-serif;
+}
+
+.contenedorMascotas {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  background-image: url("/fondoadopciones/symbol-scatter-haikei.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.adopciones {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+
+.mascota {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fafafa;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  margin: 10px;
+}
+.mascota img {
+  max-width: 100%;
+  filter: grayscale(90%);
+}
+.mascota img:hover {
+  filter: grayscale(0%);
+}
+.mascota p {
+  margin: 10px 0;
+}
+.mascota button {
+  background-color: #7AB730;
+  color: #fafafa;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.mascota button:hover {
+  background-color: #28a745;
+}
+
+.footer {
+  background-color: #2889c1;
+  color: #fafafa;
+  padding: 20px 10px; /* Ajuste del espacio interno */
+  text-align: center; /* Centrar el contenido */
+}
+
+.footerContenido {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 10px; /* Ajuste del espacio interno */
+  box-sizing: border-box; /* Asegura que el padding no afecte el ancho total */
+}
+
+.footer h4 {
+  font-size: 1.2rem; /* Tamaño de fuente ajustado para móviles */
+  margin-bottom: 10px;
+}
+
+.infoContacto p,
+.redesSociales a {
+  margin: 5px 0;
+  font-size: 1rem; /* Tamaño de fuente ajustado para móviles */
+}
+
+.redesSociales a {
+  color: #e4e7de;
+  text-decoration: none;
+  margin-right: 10px;
+  font-size: 1.2rem; /* Tamaño de fuente ajustado para móviles */
+}
+
+.redesSociales a:hover {
+  color: #fafafa;
+}
+
+.footer i {
+  margin-right: 10px;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 200%;
+  gap: 50px;
+  box-sizing: border-box;
+}
+.container .formulario,
+.container .mapa {
+  margin: 10px 0; /* Espacio vertical entre elementos */
+  box-sizing: border-box;
+  justify-content: center;
+}
+
+.formulario {
+  background-color: #fafafa;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+.formulario h2 {
+  margin-bottom: 20px;
+}
+.formulario .campo {
+  text-align: left;
+  margin-bottom: 10px;
+}
+.formulario .campo label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.formulario .campo input,
+.formulario .campo textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+.formulario .campo.comentario textarea {
+  height: 100px;
+  resize: none;
+}
+.formulario button {
+  background-color: #2889c1;
+  color: #fafafa;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.mapa {
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.mapa iframe {
+  width: 100%;
+  height: 300px;
+  border: none;
+}
+
+/*TIENDA*/
+main .contenedorProductos {
+  display: grid;
+  gap: 60px;
+  margin: 36px 0;
+}
+
+.productos {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+  background-image: url("/fondoadopciones/symbol-scatter-haikei.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.producto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 30px;
+  background-color: white;
+}
+
+.imagenProducto {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+/*USANDO MIXIN*/
+.botonProducto {
+  padding: 10px;
+  background-color: #2ecc71;
+  color: #fafafa;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  margin: 10px;
+  display: grid;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body,
+html {
+  height: 100%;
+  font-family: Arial, sans-serif;
+}
+
+main .contenedorPersonas {
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  margin: 0;
+  background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+}
+
+.personas {
+  text-align: center;
+  margin: 10px;
+  border-bottom: 1px solid black;
+  background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+}
+
+.personas p {
+  font-size: 25px;
+  text-align: center;
+  color: #ffffff;
+  padding: 10px;
+  font-family: "Roboto", sans-serif;
+}
+
+.contenedorPersonas {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  background-image: url("/fondoadopciones/symbol-scatter-haikei.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.persona {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+
+.persona {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  margin: 10px;
+}
+.persona img {
+  max-width: 100%;
+  filter: grayscale(90%);
+}
+.persona img:hover {
+  filter: grayscale(0%);
+}
+.persona p {
+  margin: 10px 0;
+}
+
+/*NOSOTROS*/
+@media (max-width: 1023px) {
+  .persona {
+    margin: 5vh;
+    font-size: 2rem;
+  }
+  .persona h3,
+  .personas p {
+    font-size: inherit;
+  }
+  .contenedorPersonas {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 768px) {
+  .contenedorPersonas {
+    grid-template-columns: 1fr;
+  }
+}
+/*TIENDA*/
+@media (max-width: 768px) {
+  .productos {
+    grid-template-columns: 1fr;
+  }
+}
+/*CONTACTO*/
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+    max-width: 1200px;
+    margin: 50px;
+  }
+}
+/*ADOPCIONES*/
+@media (max-width: 1023px) {
+  .mascota {
+    margin: 5vh;
+    font-size: 2rem;
+  }
+  .mascota h3,
+  .mascota p {
+    font-size: inherit;
+  }
+  .contenedorMascotas {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 768px) {
+  .contenedorMascotas {
+    grid-template-columns: 1fr;
+  }
+}
 /*BOTON WTP*/
 .whatsapp-btn {
   width: 60px;
@@ -292,7 +468,7 @@ p {
 }
 .whatsapp-btn a {
   text-decoration: none;
-  color: #fff;
+  color: #fafafa;
 }
 .whatsapp-btn img {
   max-width: 100%;
