--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,40 +1,73 @@
-/*CONTACTO*/
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    max-width: 200%; 
+    gap: 50px;
+    box-sizing: border-box;
 
-.mi-formulario {
-    max-width: 400px;
-    margin: 50px auto;
+    .formulario,
+    .mapa {
+        margin: 10px 0; /* Espacio vertical entre elementos */
+        box-sizing: border-box;
+        justify-content: center;
+    }
+}
 
+.formulario {
+    background-color: $color-blanco;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 
-    label {
-        display: block;
-        margin-bottom: 5px;
+    h2 {
+        margin-bottom: 20px;
     }
 
-    input {
-        width: 100%;
-        padding: 8px;
+    .campo {
+        text-align: left;
         margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        font-size: 16px;
 
-        &:focus {
-            outline: none;
-            border-color: #333;
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        input,
+        textarea {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid $color-border;
+            border-radius: 4px;
+            box-sizing: border-box;
+            font-size: 16px;
         }
     }
 
-    input[type="submit"] {
-        background-color: #333;
-        color: #f1eaea;
-        border: none;
-        padding: 10px 20px;
-        font-size: 16px;
-        border-radius: 4px;
-        cursor: pointer;
+    .campo.comentario textarea {
+        height: 100px;
+        resize: none;
+    }
 
-        &:hover {
-            background-color: #555;
-        }
+    button {
+        background-color: $color-azul;
+        color: $color-blanco;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+}
+
+.mapa {
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    overflow: hidden;
+
+    iframe {
+        width: 100%;
+        height: 300px; 
+        border: none;
     }
 }
