--- a/scss/_adopciones.scss
+++ b/scss/_adopciones.scss
@@ -36,6 +36,8 @@ main .contenedorMascotas  {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    overflow-x: hidden;
+    justify-content: center;
 }
 
 .adopciones {
