--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -21,6 +21,8 @@
 
     .contenedorPersonas {
         grid-template-columns: 1fr;
+        gap: 20px;
+        margin: 20px;
     }
 }
 
@@ -57,8 +59,8 @@
     }
 
     .mascota h3,
-    .mascota p {
-        font-size: inherit;
+    .contenedorMascota p {
+        font-size: 15px;
     }
 
     .contenedorMascotas {
