--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -23,6 +23,7 @@
         grid-template-columns: 1fr;
         gap: 20px;
         margin: 20px;
+        overflow-x: hidden;
     }
 }
 
@@ -73,5 +74,6 @@
 
     .contenedorMascotas {
         grid-template-columns: 1fr;
+        overflow-x: hidden;
     }
 }
