--- a/css/estilo.css
+++ b/css/estilo.css
@@ -345,6 +345,16 @@ html {
   font-family: Arial, sans-serif;
 }
 
+main .contenedorPersonas {
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  margin: 0;
+  background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+}
+
 .personas {
   text-align: center;
   margin: 10px;
@@ -353,9 +363,8 @@ html {
 }
 
 .personas p {
-  font-size: 25px;
-  text-align: center;
-  color: #ffffff;
+  font-size: 20px;
+  color: #fafafa;
   padding: 10px;
   font-family: "Roboto", sans-serif;
 }
@@ -372,7 +381,7 @@ html {
   justify-content: center;
 }
 
-.persona {
+.personas {
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 20px;
@@ -384,7 +393,7 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: #fafafa;
   border: 1px solid #ccc;
   padding: 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
