--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -1,4 +1,14 @@
 
+main .contenedorPersonas  {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    margin: 0;
+    background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+}
+
 
 .personas {
     text-align: center;
@@ -9,9 +19,8 @@
 
 
 .personas p {
-    font-size: 25px;
-    text-align: center;
-    color: #ffffff;
+    font-size: 20px;
+    color: $color-blanco;
     padding: 10px;
     font-family: "Roboto" , sans-serif;
     
@@ -31,7 +40,7 @@
     justify-content: center;
 }
 
-.persona {
+.personas {
     border: 1px solid $color-border;
     border-radius: 10px;
     padding: 20px;
@@ -43,7 +52,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: $color-blanco;
     border: 1px solid $color-border;
     padding: 20px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
@@ -64,6 +73,5 @@
     p {
         margin: 10px 0;
     }
-
 }
 
