--- a/css/estilo.css
+++ b/css/estilo.css
@@ -410,15 +410,15 @@ main .contenedorPersonas {
   margin: 10px 0;
 }
 
-/*NOSOTROS*/
+/*ADOPCIONES*/
 @media (max-width: 1023px) {
   .persona {
     margin: 5vh;
     font-size: 2rem;
   }
   .persona h3,
-  .personas p {
-    font-size: inherit;
+  .contenedorPersonas p {
+    font-size: 15px;
   }
   .contenedorPersonas {
     grid-template-columns: 1fr 1fr;
@@ -427,8 +427,6 @@ main .contenedorPersonas {
 @media (max-width: 768px) {
   .contenedorPersonas {
     grid-template-columns: 1fr;
-    gap: 20px;
-    margin: 20px;
     overflow-x: hidden;
   }
 }
