--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,4 +1,4 @@
-/*NOSOTROS*/
+/*ADOPCIONES*/
 
 @media (max-width:1023px) {
     .persona {
@@ -7,8 +7,8 @@
     }
 
     .persona h3,
-    .personas p {
-        font-size: inherit;
+    .contenedorPersonas p {
+        font-size: 15px;
     }
 
     .contenedorPersonas {
@@ -21,8 +21,6 @@
 
     .contenedorPersonas {
         grid-template-columns: 1fr;
-        gap: 20px;
-        margin: 20px;
         overflow-x: hidden;
     }
 }
