--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -22,6 +22,7 @@
     .contenedorPersonas {
         grid-template-columns: 1fr;
         overflow-x: hidden;
+        background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
     }
 }
 
@@ -33,6 +34,7 @@
 
     .productos {
         grid-template-columns: 1fr;
+        background-image: url(/fondoadopciones/symbol-scatter-haikei.png)
     }
 }
 
@@ -73,5 +75,6 @@
     .contenedorMascotas {
         grid-template-columns: 1fr;
         overflow-x: hidden;
+        background-image: url(/fondoadopciones/symbol-scatter-haikei.png)
     }
 }
