--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -22,7 +22,7 @@
     .contenedorPersonas {
         grid-template-columns: 1fr;
         overflow-x: hidden;
-        background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+        background-image: url(../fondoadopciones/symbol-scatter-haikei.png);
     }
 }
 
@@ -34,7 +34,7 @@
 
     .productos {
         grid-template-columns: 1fr;
-        background-image: url(/fondoadopciones/symbol-scatter-haikei.png)
+        background-image: url(../fondoadopciones/symbol-scatter-haikei.png)
     }
 }
 
