--- a/css/estilo.css
+++ b/css/estilo.css
@@ -352,14 +352,14 @@ main .contenedorPersonas {
   align-items: center;
   height: 80vh;
   margin: 0;
-  background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+  background-image: url(../fondoadopciones/symbol-scatter-haikei.png);
 }
 
 .personas {
   text-align: center;
   margin: 10px;
   border-bottom: 1px solid black;
-  background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+  background-image: url(../fondoadopciones/symbol-scatter-haikei.png);
 }
 
 .personas p {
@@ -373,7 +373,7 @@ main .contenedorPersonas {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  background-image: url("/fondoadopciones/symbol-scatter-haikei.png");
+  background-image: url(../fondoadopciones/symbol-scatter-haikei.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -464,7 +464,7 @@ main .contenedorPersonas {
   .contenedorMascotas {
     grid-template-columns: 1fr;
     overflow-x: hidden;
-    background-image: url(/fondoadopciones/symbol-scatter-haikei.png);
+    background-image: url(../fondoadopciones/symbol-scatter-haikei.png);
   }
 }
 /*BOTON WTP*/
