--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -75,6 +75,6 @@
     .contenedorMascotas {
         grid-template-columns: 1fr;
         overflow-x: hidden;
-        background-image: url(/fondoadopciones/symbol-scatter-haikei.png)
+        background-image: url(../fondoadopciones/symbol-scatter-haikei.png)
     }
 }
