--- a/scss/_adopciones.scss
+++ b/scss/_adopciones.scss
@@ -6,7 +6,7 @@ main .contenedorMascotas  {
     align-items: center;
     height: 80vh;
     margin: 0;
-    background-image: url(../fondoadopciones/symbol-scatter-haikei.png);
+    background-image: url('../fondoadopciones/symbol-scatter-haikei.png');
 }
 
 
@@ -14,7 +14,7 @@ main .contenedorMascotas  {
     text-align: center;
     margin: 10px;
     border-bottom: 1px solid black;
-    background-image: url(../fondoadopciones/symbol-scatter-haikei.png);
+    background-image: url('../fondoadopciones/symbol-scatter-haikei.png');
 }
 
 
@@ -32,7 +32,7 @@ main .contenedorMascotas  {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    background-image: url(../fondoadopciones/symbol-scatter-haikei.png); 
+    background-image: url('../fondoadopciones/symbol-scatter-haikei.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
