--- a/css/estilo.css
+++ b/css/estilo.css
@@ -296,7 +296,7 @@ main .contenedorProductos {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
-  background-image: url("/fondoadopciones/symbol-scatter-haikei.png");
+  background-image: url("../fondoadopciones/symbol-scatter-haikei.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
