correccion fondo tienda2

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -386,6 +386,7 @@ main .contenedorPersonas {
   border-radius: 10px;
   padding: 20px;
   text-align: center;
+  overflow: hidden;
 }
 
 .persona {
@@ -398,6 +399,7 @@ main .contenedorPersonas {
   padding: 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   margin: 10px;
+  overflow: hidden;
 }
 .persona img {
   max-width: 100%;
